2005-11-21  Edward Hervey  <edward@fluendo.com>

	* gst/gst-types.defs:
	GstSegment is properly wrapped
	* gst/gst.defs:
	Add GstBin::handle_message virtual method

2005-11-21  Edward Hervey  <edward@fluendo.com>

	* gst/gst.override: (_wrap_GST_TIME_ARGS): 
	Take either int or longs and return unsigned long long

2005-11-21  Edward Hervey  <edward@fluendo.com>

	* examples/gstfile.py:
	Cleanup
	* gst/gst-types.defs:
	* gst/gst.defs:
	API update.
	More fixes to follow.
	
2005-11-21  Andy Wingo  <wingo@pobox.com>

	* gst/gst.defs (net_client_clock_new): Add some defaults.

2005-11-21  Edward Hervey  <edward@fluendo.com>

	* gst/gst-types.defs:
	* gst/gst.defs:
	API updates
	* gst/pygstvalue.c: (pygst_value_as_pyobject),
	(pygst_value_from_pyobject):
	Fixes for gst_value_array and GST_FOURCC_FORMAT

2005-11-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gst.defs:
        Rename gst_caps_structure_fixate_* to gst_structure_fixate_*
        (#322027)

2005-11-21  Edward Hervey  <edward@fluendo.com>

	* gst/gst-types.defs:
	* gst/gst.defs:
	Update for latest API changes
	Still have to make GstSegment properly wrappable (GBoxed?)

2005-11-18  Andy Wingo  <wingo@pobox.com>

	* gst/Makefile.am: Add GST_NET libs.

	* gst/gst.defs (gst_net_time_provider_new) 
	(gst_net_client_clock_new): Add constructors

	* configure.ac: Check for gstreamer-net as well.

	* gst/gst.override: Include gst/net/gstnet.h.

	* gst/gst-types.defs (NetTimeProvider, NetClientClock): Added new
	types.

2005-11-15  Edward Hervey  <edward@fluendo.com>

	* gst/gst.defs:
	Keep refcount for the message of gst_bus_post()
	* gst/gststructure.override:
	Don't free a structure on dealloc (the parent does that)
	* testsuite/test_message.py:
	Proper testing of bus functionnality with a mainloop

2005-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: back to HEAD

=== release 0.9.5 ===

2005-11-11  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac: